# OpenScientific-Workbench

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.agents/: AGENTS.md
.github/workflows/: ci.yml  e2e.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  locustfile.py  pyproject.toml
backend/docs/tools/: README.md  UNSUPPORTED.md  action_tool_catalog.md  data_lake_source_list.md  db_adapter_catalog.md
backend/migrations/: env.py
backend/migrations/versions/: 52f178f2622f_initial_schema.py  6714741f0d35_add_artifacts_table.py
backend/sandbox/: environment.yml  requirements-pip.txt
backend/scripts/: fetch_data_lake.py  run_worker.py
backend/src/: __init__.py
backend/src/application/: __init__.py
backend/src/application/use_cases/: __init__.py  audit_artifact.py  create_session.py  critique_manuscript.py  dispatch_hpc_job.py  fork_workspace.py  ingest_document.py  retrieve_context.py  route_mcp_tool.py  submit_task.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  agent_session.py  dag.py  job_status.py  manuscript.py  review.py  scientific_artifact.py  user.py  workspace.py
backend/src/domain/ports/: __init__.py  artifact_repository.py  credential_provider.py  document_parser.py  graph_store.py  hpc_job_dispatcher.py  mcp_router.py  model_provider.py  node_executor.py  reviewer.py  session_repository.py  storage_manager.py  task_planner.py  user_repository.py  vector_store.py  vram_checker.py  workspace_repository.py
backend/src/domain/services/: __init__.py  evo2_scaling_decision.py  json_extraction.py  mcts_orchestrator.py  numeric_reviewer.py  numeric_validator.py  path_guard.py  pii_sanitizer.py  reproducibility.py  upload_guard.py
backend/src/infrastructure/: __init__.py  config.py  telemetry.py
backend/src/infrastructure/graph/: __init__.py  neo4j_client.py
backend/src/infrastructure/hpc/: __init__.py  local_job_dispatcher.py  modal_dispatcher.py  nvidia_vram_checker.py  slurm_dispatcher.py
backend/src/infrastructure/latex/: tectonic_compiler.py
backend/src/infrastructure/llm/: __init__.py  llm_node_executor.py  llm_task_planner.py  model_client_factory.py  tool_catalog_index.py
backend/src/infrastructure/mcp/: __init__.py  bio_adapters.py  bio_direct_adapters.py  expression_browser_db_adapters.py  jsonrpc_client.py  literature_adapters.py  pathway_regulatory_db_adapters.py  proteomics_pharma_db_adapters.py  server_registry.py  structure_db_adapters.py  taxonomy_db_adapters.py  variant_clinical_db_adapters.py
backend/src/infrastructure/parsing/: chunker.py  marker_adapter.py  pypdf_adapter.py
backend/src/infrastructure/persistence/: __init__.py  database.py  in_memory_repos.py  models.py  postgres_artifact_repo.py  postgres_session_repo.py  postgres_user_repo.py  postgres_workspace_repo.py
backend/src/infrastructure/sandbox/: __init__.py  bubblewrap_driver.py  gvisor_driver.py  sandbox_node_executor.py
backend/src/infrastructure/security/: __init__.py  vault_client.py
backend/src/infrastructure/skills/: skill_compiler.py  skill_loader.py  skill_registration.py
backend/src/infrastructure/storage/: __init__.py  btrfs_manager.py
backend/src/infrastructure/tools/: __init__.py  _sandbox_tool_base.py  biophysics_assays.py  cell_imaging.py  cloning.py  genomics_popgen.py  immunology.py  pharmacology.py  physiology_imaging.py  single_cell_omics.py  support.py  synthetic_systems_biology.py
backend/src/infrastructure/vector/: qdrant_client.py
backend/src/presentation/: __init__.py  dependencies.py  main.py
backend/src/presentation/middleware/: __init__.py  jwt_auth.py  rate_limit.py  security_headers.py
backend/src/presentation/routes/: __init__.py  auth.py  chat.py  documents.py  health.py  hpc.py  manuscript.py  mcp.py  sessions.py  tasks.py  workspaces.py
backend/tests/: conftest.py
backend/tests/integration/: test_bubblewrap_sandbox_escape.py  test_consumer_contracts.py  test_mcp_jsonrpc.py  test_postgres_repositories.py  test_routes_with_db.py  test_security_sandbox_escape.py
backend/tests/retroactive/: test_pii_sanitization.py  test_reproducibility.py
backend/tests/unit/: _pdf_fixtures.py  test_agent_session.py  test_architecture.py  test_audit_artifact.py  test_auth_routes.py  test_bio_direct_adapters.py  test_biophysics_assays.py  test_btrfs_manager.py  test_bubblewrap_driver.py  test_cell_imaging.py  test_chat_rag_wiring.py  test_chunker.py  test_cloning.py  test_config.py  test_cors_middleware.py  test_create_session.py  test_critique_manuscript.py  test_database.py  test_dependencies.py  test_dispatch_hpc_job.py  test_documents_route.py  test_evo2_scaling.py  test_expression_browser_db_adapters.py  test_fetch_data_lake.py  test_fork_workspace.py  test_genomics_popgen.py  test_health_routes.py  test_hpc_dependencies.py  test_hpc_routes.py  test_idor_ownership.py  test_immunology.py  test_infrastructure_adapters.py  test_ingest_document.py  test_json_extraction.py  test_literature_adapters.py  test_llm_node_executor.py  test_llm_task_planner.py  test_local_job_dispatcher.py  test_main_lifespan.py  test_manuscript.py  (+56 more)
data_lake/: MANIFEST.md
docker/: vault-config.hcl  vault-entrypoint.sh
docs/: README.md  validation_checklist.md
docs/api/: auth_rate_limiting.md  error_catalog.md  openapi_spec.md
docs/architecture/: adr_001_orchestration.md  adr_002_sandbox.md  adr_003_storage.md  adr_004_mcp_integration.md  adr_005_scientific_rag.md  c4_component.md  c4_container.md  c4_context.md  c4_deployment.md  overview.md  threat_model.md
docs/compliance/: audit_incident_response.md  privacy_lgpd.md
docs/database/: indexing_partitioning.md  reproducibility.md  (+1 more)
frontend/: .dockerignore  Dockerfile  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  vitest.config.ts  vitest.setup.ts
k8s/: README.md  backend-deployment.yaml  backend-service.yaml  configmap.yaml  frontend-deployment.yaml  frontend-service.yaml  secret.yaml.example
(+210 files in other folders)
