[project]
name = "osw-backend"
version = "0.1.0"
description = "Backend Core for OpenScientific-Workbench"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    # `[email]` extra pulls email-validator, required by the EmailStr field on the
    # User entity (domain/entities/user.py). It used to arrive transitively via
    # pydantic-ai; declaring it directly keeps EmailStr working after that removal.
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "redis>=5.0.4",
    "neo4j>=5.21.0",
    "qdrant-client>=1.9.1",
    "paramiko>=3.4.0",
    "httpx>=0.27.0",
    "pyjwt>=2.8.0",
    "hvac>=2.1.0",
    "pyyaml>=6.0",
    # OpenTelemetry: `telemetry.py` sets up tracing at app startup (called from the
    # main.py lifespan) and `gvisor_driver.py` emits sandbox spans, so these are
    # runtime deps, not dev-only. instrumentation-fastapi pulls the instrumentation
    # stack; sdk pulls the api. Undeclared before -> only resolved by an incidental
    # local venv install; a clean CI environment failed importing FastAPIInstrumentor.
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
]

[dependency-groups]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    # Async SQLite driver used only by the test suite: `database.py` builds the
    # engine from DATABASE_URL, which defaults to sqlite+aiosqlite when no Postgres
    # URL is supplied (as in the unit-test CI job). Production uses asyncpg/Postgres.
    "aiosqlite>=0.20.0",
    "black>=24.4.2",
    "isort>=5.13.2",
    "mypy>=1.10.0",
    "ruff>=0.4.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
# `TestClient` (starlette.testclient) runs the ASGI app in a background OS thread
# (anyio blocking portal) for every request, and SQLAlchemy's async engine bridges
# to its sync DBAPI drivers (aiosqlite/asyncpg) via `greenlet` context switches.
# Without declaring both concurrency libraries, coverage.py silently stops tracing
# a coroutine's frame the moment it resumes after a real DB await, under-reporting
# every line that follows an `await session.execute(...)`-style call.
concurrency = ["greenlet", "thread"]
